# dwarven

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
agents/: modern-python-generator.agent.md
artifacts/simple_script_claude-sonnet-4.5/: .gitignore  README.md  analyze.py  execution.txt  pyproject.toml  sample_data.csv
artifacts/simple_script_claude-sonnet-4.5/docs/: 01_overview.md  02_architecture.md  03_data_model.md  04_adr.md  05_tasks.md  06_test_plan.md  07_quality_report.md  08_acceptance_report.md  99_generation_summary.md
artifacts/simple_script_claude-sonnet-4.5/tests/: test_analyze.py
artifacts/simple_script_claude-sonnet-4.5_wz_instruction/: .gitignore  COMPLETION_REPORT.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.md  execution.txt  pyproject.toml  requirements.txt
artifacts/simple_script_claude-sonnet-4.5_wz_instruction/data/: sample_data.csv
artifacts/simple_script_claude-sonnet-4.5_wz_instruction/docs/: 00_requirements.md  01_overview.md  02_architecture.md  03_data_model.md  04_adr.md  05_tasks.md  06_test_plan.md  07_quality_report.md  08_acceptance_report.md  99_generation_summary.md
artifacts/simple_script_claude-sonnet-4.5_wz_instruction/src/csv_analyzer/: __init__.py  __main__.py  analyzer.py  main.py  models.py
artifacts/simple_script_claude-sonnet-4.5_wz_instruction/src/csv_analyzer/services/: data_loader.py  reporter.py  statistics.py  visualizer.py
artifacts/simple_script_claude-sonnet-4.5_wz_instruction/tests/: test_analyzer.py  test_data_loader.py  test_main.py  test_models.py  test_reporter.py  test_statistics.py  test_visualizer.py
artifacts/simple_script_gemini-3-pro-preview_wz_instruction/: .gitignore  README.md  execution.txt  pyproject.toml  sample_data.csv
artifacts/simple_script_gemini-3-pro-preview_wz_instruction/docs/: 01_overview.md  02_architecture.md  03_data_model.md  04_adr.md  05_tasks.md  06_test_plan.md  07_quality_report.md  08_acceptance_report.md  99_generation_summary.md
artifacts/simple_script_gemini-3-pro-preview_wz_instruction/src/data_analyzer/: analysis.py  loader.py  main.py  plotting.py  report.py
artifacts/simple_script_gemini-3-pro-preview_wz_instruction/tests/: test_analysis.py  test_loader.py  test_main.py  test_plotting.py  test_report.py
artifacts/simple_script_gpt-5-mini/: README.md  execution.txt  pyproject.toml  requirements-dev.txt  requirements.txt
artifacts/simple_script_gpt-5-mini/docs/: 00_requirements.md  01_overview.md  02_architecture.md  03_data_model.md  04_adr.md  05_tasks.md  06_test_plan.md  07_quality_report.md  08_acceptance_report.md  99_generation_summary.md
artifacts/simple_script_gpt-5-mini/sample_data/: sample_data.csv
artifacts/simple_script_gpt-5-mini/src/: analyze.py  cli.py  io.py  processing.py  report.py  viz.py
artifacts/simple_script_gpt-5-mini/tests/: test_integration.py  test_io.py  test_processing.py
artifacts/simple_script_gpt-5-mini_wz_instruction/: README.md  execution.txt  pyproject.toml  requirements.txt  sample_data.csv
artifacts/simple_script_gpt-5-mini_wz_instruction/docs/: 01_overview.md  02_architecture.md  03_data_model.md  04_adr.md  05_tasks.md  06_test_plan.md  07_quality_report.md  08_acceptance_report.md  99_generation_summary.md
artifacts/simple_script_gpt-5-mini_wz_instruction/src/: analyze.py
artifacts/simple_script_gpt-5-mini_wz_instruction/src/analyzer/: __init__.py  core.py  io.py  report.py  visualization.py
artifacts/simple_script_gpt-5-mini_wz_instruction/src/analyzer/templates/: report.html.j2
artifacts/simple_script_gpt-5-mini_wz_instruction/tests/: test_core.py
artifacts/simple_script_gpt-5.3-codex_wz_instruction/: .gitignore  README.md  analyze.py  execution.txt  pyproject.toml  requirements.txt  sample_data.csv
artifacts/simple_script_gpt-5.3-codex_wz_instruction/docs/: 01_overview.md  02_architecture.md  03_data_model.md  04_adr.md  05_tasks.md  06_test_plan.md  07_quality_report.md  08_acceptance_report.md  99_generation_summary.md
artifacts/simple_script_gpt-5.3-codex_wz_instruction/src/data_reporter/: __init__.py  analysis.py  app.py  cli.py  errors.py  io.py  models.py  report.py  viz.py
artifacts/simple_script_gpt-5.3-codex_wz_instruction/src/data_reporter/templates/: report.html.j2
artifacts/simple_script_gpt-5.3-codex_wz_instruction/tests/: test_pipeline.py
docs/: available_models.md  comparison_report.md  copilot-customization-guide.md
examples/: simple_web_app.md
instructions/: python.instructions.md
skills/python-run-quality-checks/: SKILL.md
skills/python-run-tests/: SKILL.md
skills/python-setup-dependencies/: SKILL.md
src/dwarven/: __init__.py  config.py  container.py  copilot_session.py  main.py  phases.py
