[project]
name = "analyzer"
version = "0.1.0"
description = "CSV analysis and HTML report tool"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0",
  "matplotlib>=3.0",
  "Jinja2>=3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.0",
  "black>=23.0",
  "mypy>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
