[project]
name = "data-reporter"
version = "0.1.0"
description = "Analyze CSV time-series data and generate an HTML report."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jinja2>=3.1.0",
  "pandas>=2.2.0",
  "plotly>=5.20.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.0.0",
  "mypy>=1.8.0",
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
]

[project.scripts]
analyze = "data_reporter.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_reporter"]

[tool.hatch.build.targets.wheel.force-include]
"src/data_reporter/templates" = "data_reporter/templates"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-q"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
  "jinja2",
  "jinja2.*",
  "pandas",
  "pandas.*",
  "plotly",
  "plotly.*",
]
ignore_missing_imports = true
